[gd_scene load_steps=35 format=3 uid="uid://by8aw7duxspx8"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_8i032"]
[ext_resource type="Texture2D" uid="uid://dcx0tmve0dnvf" path="res://sprites/Imagem do WhatsApp de 2024-10-05 Ã (s) 18.43.14_b34c225b.jpg" id="1_b3qkb"]
[ext_resource type="Script" path="res://scripts/jogar_button.gd" id="1_ugkrb"]
[ext_resource type="Script" path="res://scripts/opcoes_button.gd" id="2_1ebod"]
[ext_resource type="FontFile" uid="uid://c1850qmeh1v6h" path="res://fontes/old-english-gothic-pixel-font/OldEnglishGothicPixelRegular-gx1jp.otf" id="2_65tvk"]
[ext_resource type="FontFile" uid="uid://cescu06r2nw5f" path="res://fontes/pixeloid-font/PixeloidMono-d94EV.ttf" id="2_x20gm"]
[ext_resource type="Script" path="res://scripts/sair_button.gd" id="3_kqdxb"]
[ext_resource type="Texture2D" uid="uid://rdxk5um62khl" path="res://sprites/Botao play.png" id="4_gk2xn"]
[ext_resource type="Texture2D" uid="uid://kllv3w4mvi36" path="res://sprites/Botao conf.png" id="6_alqg2"]
[ext_resource type="Texture2D" uid="uid://bo5p7ovdicvsj" path="res://sprites/Botao sair.png" id="8_ykljk"]
[ext_resource type="Texture2D" uid="uid://dxxfg0e7qris5" path="res://sprites/logo potion seller.png" id="9_e5kqs"]

[sub_resource type="Gradient" id="Gradient_pmqp2"]
offsets = PackedFloat32Array(0, 0.227273)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ksmi0"]
gradient = SubResource("Gradient_pmqp2")
width = 1080
height = 1080
fill_from = Vector2(0.334862, 0.243119)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m5aet"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8cobj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hnsft"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2prsc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gi0y8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sgife"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_74kfs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l5p04"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jufhm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_su1kt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3aexm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fmurt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d8nlb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rbok4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r3pcv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lfv65"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cxfpw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_et5b0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_geuee"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0p022"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uqxqf"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_8i032")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_top = -4.0
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 8

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer"]
position = Vector2(1266, 462.5)
scale = Vector2(1.27734, 1.22363)
texture = ExtResource("1_b3qkb")

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
texture = SubResource("GradientTexture2D_ksmi0")
expand_mode = 1
stretch_mode = 6

[node name="JogarButton" type="Button" parent="."]
custom_minimum_size = Vector2(240, 40)
offset_left = 84.0
offset_top = 752.0
offset_right = 500.0
offset_bottom = 971.0
theme_override_fonts/font = ExtResource("2_x20gm")
theme_override_font_sizes/font_size = 29
theme_override_styles/focus = SubResource("StyleBoxEmpty_m5aet")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_8cobj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_hnsft")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_2prsc")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_gi0y8")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_sgife")
theme_override_styles/hover = SubResource("StyleBoxEmpty_74kfs")
icon = ExtResource("4_gk2xn")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("1_ugkrb")

[node name="OpcoesButton" type="Button" parent="."]
custom_minimum_size = Vector2(220, 40)
offset_left = 409.0
offset_top = 739.0
offset_right = 678.0
offset_bottom = 826.0
theme_override_fonts/font = ExtResource("2_x20gm")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_l5p04")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_jufhm")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_su1kt")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_3aexm")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_fmurt")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_d8nlb")
theme_override_styles/hover = SubResource("StyleBoxEmpty_rbok4")
icon = ExtResource("6_alqg2")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("2_1ebod")

[node name="SairButton" type="Button" parent="."]
custom_minimum_size = Vector2(220, 40)
offset_left = 410.0
offset_top = 829.0
offset_right = 675.0
offset_bottom = 900.0
theme_override_fonts/font = ExtResource("2_x20gm")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_r3pcv")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_lfv65")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_cxfpw")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_et5b0")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_geuee")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_0p022")
theme_override_styles/hover = SubResource("StyleBoxEmpty_uqxqf")
icon = ExtResource("8_ykljk")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("3_kqdxb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 93.0
offset_top = 984.0
offset_right = 761.0
offset_bottom = 1433.0
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 60

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 127.0
offset_top = 133.0
offset_right = 708.0
offset_bottom = 520.0
theme_override_fonts/font = ExtResource("2_65tvk")
theme_override_font_sizes/font_size = 160
text = "Potion
   Seller"

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -50.0
offset_top = 156.0
offset_right = 862.0
offset_bottom = 517.0
rotation = -0.105119
texture = ExtResource("9_e5kqs")
expand_mode = 1

[connection signal="mouse_entered" from="JogarButton" to="." method="_on_jogar_button_mouse_entered"]
[connection signal="pressed" from="JogarButton" to="." method="_on_jogar_button_pressed"]
[connection signal="pressed" from="JogarButton" to="JogarButton" method="_on_pressed"]
[connection signal="mouse_entered" from="OpcoesButton" to="." method="_on_opcoes_button_mouse_entered"]
[connection signal="pressed" from="OpcoesButton" to="." method="_on_opcoes_button_pressed"]
[connection signal="pressed" from="OpcoesButton" to="OpcoesButton" method="_on_pressed"]
[connection signal="mouse_entered" from="SairButton" to="." method="_on_sair_button_mouse_entered"]
[connection signal="pressed" from="SairButton" to="." method="_on_sair_button_pressed"]
[connection signal="pressed" from="SairButton" to="SairButton" method="_on_pressed"]
